[package]
name = "lnode"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
ldk-node = "0.3"
anyhow = "1.0.86"
bdk = { version = "0.29.0", default-features = false, features = ["std", "async-interface", "use-esplora-async", "sqlite-bundled", "keys-bip39"]}
sled = "0.34.7"
once_cell = "1.19"